// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkButtonLink should render correctly 1`] = `
<View
  style={null}
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "center",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
  </View>
</View>
`;

exports[`Android BpkButtonLink should render correctly with iconAlignment="leading" 1`] = `
<View
  style={null}
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "center",
        },
        Object {
          "flexDirection": "row-reverse",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
              "marginLeft": 4,
            },
            Object {
              "marginLeft": 0,
              "marginRight": 4,
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Android BpkButtonLink should render correctly with iconAlignment="trailing" 1`] = `
<View
  style={null}
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "center",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
              "marginLeft": 4,
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Android BpkButtonLink should render correctly with theme prop 1`] = `
<View
  style={null}
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "center",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
            Object {
              "color": "red",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
  </View>
</View>
`;

exports[`Android BpkButtonLink should support elements as icons 1`] = `
<View
  style={null}
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "center",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
          },
        ]
      }
    >
      foo
    </Text>
  </View>
</View>
`;

exports[`Android BpkButtonLink should support overwriting styles 1`] = `
<View
  style={
    Object {
      "width": 100,
    }
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "center",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
  </View>
</View>
`;

exports[`Android BpkButtonLink should support the "disabled" property 1`] = `
<View
  style={null}
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
        "disabled",
      ]
    }
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "center",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
            Object {
              "color": "rgb(178, 174, 189)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
  </View>
</View>
`;

exports[`Android BpkButtonLink should support the "icon" property 1`] = `
<View
  style={null}
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "center",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
              "marginLeft": 4,
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Android should support "borderlessBackground" equal to false 1`] = `
<View
  style={null}
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "center",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
  </View>
</View>
`;
